[package]
name = "pht_download"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.2.1"